Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -58,7 +58,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt35652362"
       },
-      "description": "Genres: Mystery\nTags:Crime/Detective\nAnnounced at the \"Mirage QUEEN Prefers Parties\" event, that a new <i>Mirage QUEEN</i> anime has been greenlit.<br><br>\n(Source: Anime News Network, edited)"
+      "description": "Genres: Mystery\nTags:Detective/Crime\nAnnounced at the \"Mirage QUEEN Prefers Parties\" event, that a new <i>Mirage QUEEN</i> anime has been greenlit.<br><br>\n(Source: Anime News Network, edited)"
     },
     {
       "id": "tt36583287",
