Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -48,7 +48,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt36956670"
       },
-      "description": "Genres: Action, Drama, Supernatural\nTags:Curses/Shounen/Boys' Love\n<i>\"The strongest duo—A youth they can never return to.\"</i><br><br>\n\nCompilation film of <i>Jujutsu Kaisen 2nd Season's</i> \"Kaigyoku・Gyokusetsu\" (Hidden Inventory / Premature Death) arc.\n\n<br><br>\nBefore they were enemies, Satoru Gojo and Suguru Geto were high school classmates and friends. The two most powerful sorcerers are tasked with protecting Riko Amanai, a student who has been designated to be sacrificed as the Star Plasma Vessel, until she can fulfill her duty. Pursued by a religious cult and other curse users, they are the only sorcerers capable of carrying out such a difficult task – but this mission will set their destinies, and challenge the two sorcerers in ways unimaginable.<br><br>\n\n(Source: GKIDS)"
+      "description": "Genres: Action, Drama, Supernatural\nTags:Curses/Urban Fantasy/Shounen/Boys' Love/Exorcism\n<i>\"The strongest duo—A youth they can never return to.\"</i><br><br>\n\nCompilation film of <i>Jujutsu Kaisen 2nd Season's</i> \"Kaigyoku・Gyokusetsu\" (Hidden Inventory / Premature Death) arc.\n\n<br><br>\nBefore they were enemies, Satoru Gojo and Suguru Geto were high school classmates and friends. The two most powerful sorcerers are tasked with protecting Riko Amanai, a student who has been designated to be sacrificed as the Star Plasma Vessel, until she can fulfill her duty. Pursued by a religious cult and other curse users, they are the only sorcerers capable of carrying out such a difficult task – but this mission will set their destinies, and challenge the two sorcerers in ways unimaginable.<br><br>\n\n(Source: GKIDS)"
     },
     {
       "id": "tt36583287",
@@ -68,7 +68,17 @@
       "behaviorHints": {
         "defaultVideoId": "tt35652362"
       },
-      "description": "Genres: Mystery\nTags:Detective/Crime\nAnnounced at the \"Mirage QUEEN Prefers Parties\" event, that a new <i>Mirage QUEEN</i> anime has been greenlit.<br><br>\n(Source: Anime News Network, edited)"
+      "description": "Genres: Mystery\nTags:Crime/Detective\nAnnounced at the \"Mirage QUEEN Prefers Parties\" event, that a new <i>Mirage QUEEN</i> anime has been greenlit.<br><br>\n(Source: Anime News Network, edited)"
+    },
+    {
+      "id": "tt28664733",
+      "type": "movie",
+      "name": "Lost in Starlight",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx192002-sZCUa2OSDhZi.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt28664733"
+      },
+      "description": "Genres: Drama, Romance, Sci-Fi\nTags:Space Opera/Heterosexual\nIn 2050 Seoul, astronaut Nan-young’s ultimate goal is to visit Mars. But she fails the final test to onboard the fourth Mars Expedition Project. The musician Jay buries his dreams in a vintage audio equipment shop.\nThe two fall in love after a chance encounter. As they root for each other and dream of a new future. Nan-young is given another chance to fly to Mars, which is all she ever wanted…<br><br>\n\n(Source: Netflix)"
     },
     {
       "id": "tt35652414",
@@ -79,16 +89,6 @@
         "defaultVideoId": "tt35652414"
       },
       "description": "Genres: Music\nTags:Idol/Ensemble Cast\nThe third movie in the UtaPri franchise, spotlighting the idol group QUARTET NIGHT."
-    },
-    {
-      "id": "tt28664733",
-      "type": "movie",
-      "name": "Lost in Starlight",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx192002-sZCUa2OSDhZi.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt28664733"
-      },
-      "description": "Genres: Drama, Romance, Sci-Fi\nTags:Heterosexual/Space Opera\nIn 2050 Seoul, astronaut Nan-young’s ultimate goal is to visit Mars. But she fails the final test to onboard the fourth Mars Expedition Project. The musician Jay buries his dreams in a vintage audio equipment shop.\nThe two fall in love after a chance encounter. As they root for each other and dream of a new future. Nan-young is given another chance to fly to Mars, which is all she ever wanted…<br><br>\n\n(Source: Netflix)"
     },
     {
       "id": "tt36551651",
