--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -18,7 +18,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt35720302"
       },
-      "description": "Genres: Action, Adventure, Mystery, Sci-Fi\nTags:Primarily Teen Cast/Primarily Female Cast/Politics/Espionage/Steampunk/Female Protagonist\nThe fourth out of six movie sequels to the <i>Princess Principal</i> TV series."
+      "description": "Genres: Action, Adventure, Mystery, Sci-Fi\nTags:Espionage/Female Protagonist/Politics/Primarily Female Cast/Primarily Teen Cast/Steampunk\nThe fourth out of six movie sequels to the <i>Princess Principal</i> TV series."
     },
     {
       "id": "tt34812090",
@@ -31,16 +31,6 @@
       "description": "Genres: Action\nTags:\n<i>You haven't seen the real Lupin III yet.</i><br><br>\n\nThe fourth movie under the <i>LUPIN THE IIIRD</i> series of films.\n\n<br><br>\n<i>Note: The current relations are provisional and may change when more info is announced.</i>"
     },
     {
-      "id": "tt35444710",
-      "type": "movie",
-      "name": "Meitantei Conan: Sekigan no Flashback",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185212-fMiVtbxva98b.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt35444710"
-      },
-      "description": "Genres: Mystery\nTags:Police/Detective/Crime/Male Protagonist\nThe 28th <i>Detective Conan</i> movie."
-    },
-    {
       "id": "tt36956670",
       "type": "movie",
       "name": "JUJUTSU KAISEN: Hidden Inventory / Premature Death – The Movie",
@@ -49,6 +39,16 @@
         "defaultVideoId": "tt36956670"
       },
       "description": "Genres: Action, Drama, Supernatural\nTags:Curses/Urban Fantasy/Boys' Love/Shounen/Exorcism\n<i>\"The strongest duo—A youth they can never return to.\"</i><br><br>\n\nCompilation film of <i>Jujutsu Kaisen 2nd Season's</i> \"Kaigyoku・Gyokusetsu\" (Hidden Inventory / Premature Death) arc.\n\n<br><br>\nBefore they were enemies, Satoru Gojo and Suguru Geto were high school classmates and friends. The two most powerful sorcerers are tasked with protecting Riko Amanai, a student who has been designated to be sacrificed as the Star Plasma Vessel, until she can fulfill her duty. Pursued by a religious cult and other curse users, they are the only sorcerers capable of carrying out such a difficult task – but this mission will set their destinies, and challenge the two sorcerers in ways unimaginable.<br><br>\n\n(Source: GKIDS)"
+    },
+    {
+      "id": "tt35444710",
+      "type": "movie",
+      "name": "Meitantei Conan: Sekigan no Flashback",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185212-fMiVtbxva98b.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt35444710"
+      },
+      "description": "Genres: Mystery\nTags:Police/Detective/Crime/Male Protagonist\nThe 28th <i>Detective Conan</i> movie."
     },
     {
       "id": "tt36583287",
@@ -68,7 +68,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt35652362"
       },
-      "description": "Genres: Mystery\nTags:Detective/Crime\nAnnounced at the \"Mirage QUEEN Prefers Parties\" event, that a new <i>Mirage QUEEN</i> anime has been greenlit.<br><br>\n(Source: Anime News Network, edited)"
+      "description": "Genres: Mystery\nTags:Crime/Detective\nAnnounced at the \"Mirage QUEEN Prefers Parties\" event, that a new <i>Mirage QUEEN</i> anime has been greenlit.<br><br>\n(Source: Anime News Network, edited)"
     },
     {
       "id": "tt28664733",
@@ -78,7 +78,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt28664733"
       },
-      "description": "Genres: Drama, Romance, Sci-Fi\nTags:Heterosexual/Space Opera\nIn 2050 Seoul, astronaut Nan-young’s ultimate goal is to visit Mars. But she fails the final test to onboard the fourth Mars Expedition Project. The musician Jay buries his dreams in a vintage audio equipment shop.\nThe two fall in love after a chance encounter. As they root for each other and dream of a new future. Nan-young is given another chance to fly to Mars, which is all she ever wanted…<br><br>\n\n(Source: Netflix)"
+      "description": "Genres: Drama, Romance, Sci-Fi\nTags:Heterosexual/Space Opera/Astronomy/Urban/Primarily Adult Cast\nIn 2050 Seoul, astronaut Nan-young’s ultimate goal is to visit Mars. But she fails the final test to onboard the fourth Mars Expedition Project. The musician Jay buries his dreams in a vintage audio equipment shop.\nThe two fall in love after a chance encounter. As they root for each other and dream of a new future. Nan-young is given another chance to fly to Mars, which is all she ever wanted…<br><br>\n\n(Source: Netflix)"
     },
     {
       "id": "tt35652414",
