Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -1,114 +1,124 @@
 {
   "metas": [
     {
-      "id": "tt36592985",
+      "id": "tt32820897",
       "type": "movie",
-      "name": "Kobayashi-san Chi no Maidragon Samishii Gariya no Ryuu",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181839-pgM02tCNM2ae.png",
+      "name": "Demon Slayer: Kimetsu no Yaiba Infinity Castle",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178788-ePmnABYuFdcE.png",
       "behaviorHints": {
-        "defaultVideoId": "tt36592985"
+        "defaultVideoId": "tt32820897"
       },
-      "description": "Genres: Fantasy, Slice of Life\nTags:Dragons/Seinen/Maids/Found Family/Female Protagonist\n<i>\"I don’t want to let go of her hand. Because, we are a family.\"</i>\n<br><br>\nTheatrical follow-up to the second season <i>Kobayashi-san Chi no Maidragon S</i> and <i>Kobayashi-san Chi no Maidragon S: Nippon no Omotenashi (Attend wa Dragon desu)</i> OVA.<br><br>\n\n(Source: Kyoto Animation YouTube Channel)"
+      "description": "Genres: Action, Adventure, Drama, Supernatural\nTags:War/Male Protagonist/Demons/Revenge/Swordplay/Dungeon/Shounen/Super Power/Curses\n<i>The All-Out War Begins.</i>\n\n<br><br>\nTheatrical trilogy adaptation of the Infinity Castle Arc."
     },
     {
-      "id": "tt35720302",
+      "id": "tt30472557",
       "type": "movie",
-      "name": "Princess Principal: Crown Handler - Chapter 4",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186716-I873Q1vDa3Xt.jpg",
+      "name": "Chainsaw Man – The Movie: Reze Arc",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171627-6m1t9Y5JPE9u.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt35720302"
+        "defaultVideoId": "tt30472557"
       },
-      "description": "Genres: Action, Adventure, Mystery, Sci-Fi\nTags:Espionage/Female Protagonist/Politics/Primarily Female Cast/Primarily Teen Cast/Steampunk\nThe fourth out of six movie sequels to the <i>Princess Principal</i> TV series."
+      "description": "Genres: Action, Drama, Supernatural\nTags:Demons/Monster Boy/Male Protagonist/Urban Fantasy/Body Horror/Gore/Anti-Hero/Shounen/Heterosexual/Henshin\nTheatrical follow-up to <i>Chainsaw Man</i>.<br><br>\nDenji became “Chainsaw Man”, a boy with a devil’s heart, and is now part of Special Division 4’s devil hunters. After a date with Makima, the woman of his dreams, Denji takes shelter from the rain. There he meets Reze, a girl who works in a café.<br><br>\n\n(Source: MAPPA CHANNEL)\n\n"
     },
     {
-      "id": "tt34812090",
+      "id": "tt32600395",
       "type": "movie",
-      "name": "LUPIN THE IIIRD THE MOVIE: Fujimi no Ketsuzoku",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185084-tGOzBUQZe6aT.jpg",
+      "name": "100 METERS",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177687-Rjb7AszZCBU9.png",
       "behaviorHints": {
-        "defaultVideoId": "tt34812090"
+        "defaultVideoId": "tt32600395"
       },
-      "description": "Genres: Action\nTags:\n<i>You haven't seen the real Lupin III yet.</i><br><br>\n\nThe fourth movie under the <i>LUPIN THE IIIRD</i> series of films.\n\n<br><br>\n<i>Note: The current relations are provisional and may change when more info is announced.</i>"
+      "description": "Genres: Drama, Sports\nTags:Athletics/Coming of Age/Rotoscoping/Male Protagonist/Shounen/Outdoor Activities/Fitness\n<i>100 METERS</i> follows Togashi, a track star who is born to run. As a kid, he is naturally gifted and wins every 100-meter race without effort. But in sixth grade, he meets Komiya, a transfer student who is full of determination but lacks technique. In teaching him, Togashi gives Komiya a new purpose: to win no matter what. Years pass by, and Togashi and Komiya meet again as rivals on the track and reveal their true selves.\n<br><br>\n(Source: GKIDS)"
     },
     {
-      "id": "tt36956670",
+      "id": "tt34881132",
       "type": "movie",
-      "name": "JUJUTSU KAISEN: Hidden Inventory / Premature Death – The Movie",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx192809-wRlqABGsx2Qs.jpg",
+      "name": "Fushigi ‌no ‌Kuni ‌de ‌Alice to: Dive ‌in ‌Wonderland",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186181-m4vTJnKuYqje.png",
       "behaviorHints": {
-        "defaultVideoId": "tt36956670"
+        "defaultVideoId": "tt34881132"
       },
-      "description": "Genres: Action, Drama, Supernatural\nTags:Curses/Urban Fantasy/Boys' Love/Shounen/Exorcism\n<i>\"The strongest duo—A youth they can never return to.\"</i><br><br>\n\nCompilation film of <i>Jujutsu Kaisen 2nd Season's</i> \"Kaigyoku・Gyokusetsu\" (Hidden Inventory / Premature Death) arc.\n\n<br><br>\nBefore they were enemies, Satoru Gojo and Suguru Geto were high school classmates and friends. The two most powerful sorcerers are tasked with protecting Riko Amanai, a student who has been designated to be sacrificed as the Star Plasma Vessel, until she can fulfill her duty. Pursued by a religious cult and other curse users, they are the only sorcerers capable of carrying out such a difficult task – but this mission will set their destinies, and challenge the two sorcerers in ways unimaginable.<br><br>\n\n(Source: GKIDS)"
+      "description": "Genres: Fantasy\nTags:Female Protagonist/Fairy Tale/Isekai\n<i>I'm supposed to be reading the air so I don't screw up,<br>\nI'm doing what everyone else is doing,<br>\nWhy can't I get things done?</i><br><br>\n\nRise Azumino, a university student, was lost in her life,<br>\nOne day, guided by an invitation letter left behind by her late grandmother, she enters “Wonderland\".<br>\nThere she meets a girl named Alice and they begin their journey together.<br><br>\n\nRise meets the White Rabbit, the Caterpillar, the Queen of Hearts, the Trumpeter, the Mad Hatter and the March Hare, Humpty Dumpty, the twins Tweedle Dum and Tweedle Dee, the Cheshire Cat and ......<br>\nThe residents of Wonderland appear one after another in front of Rise!<br>\nAnd the crazy commotion that ensues!<br>\nWhat kind of future will Rise choose in this crazy adventure with Alice?<br><br>\n\nThis adventure will surely bring a smile to your face tomorrow!<br><br>\n(Source: Official Site, Translated)"
     },
     {
-      "id": "tt35444710",
+      "id": "tt36592916",
       "type": "movie",
-      "name": "Meitantei Conan: Sekigan no Flashback",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185212-fMiVtbxva98b.jpg",
+      "name": "ChaO",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186169-cNJtnF4HLM40.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt35444710"
+        "defaultVideoId": "tt36592916"
       },
-      "description": "Genres: Mystery\nTags:Police/Detective/Crime/Male Protagonist\nThe 28th <i>Detective Conan</i> movie."
+      "description": "Genres: Fantasy, Romance\nTags:Mermaid\nA future society where humans and mermaids coexist. One day, Stefan, an office worker who works at a shipbuilding company, is suddenly proposed to by ChaO, the princess of the mermaid kingdom! Without knowing why, Stefan ends up living with Chao!? Receiving Chao's pure and straightforward love, Stefan slowly finds himself drawn to her. What will become of their love!?<br><br>\n(Source: Official Website, Translated)"
     },
     {
-      "id": "tt36583287",
+      "id": "tt36857472",
       "type": "movie",
-      "name": "Boku to Roboco Movie",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166249-GOWftJA89enZ.jpg",
+      "name": "AS ONE",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx187317-epCJqy8VejDa.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt36583287"
+        "defaultVideoId": "tt36857472"
       },
-      "description": "Genres: Comedy, Slice of Life\nTags:Shounen/Robots/Maids\nTheatrical follow-up to <i>Boku to Roboco</i>."
+      "description": "Genres: Mecha, Sci-Fi\nTags:\nSquare Enix’s sci-fi arcade game <i>Starwing Paradox</i> is making a comeback as a prequel anime movie. A new anime feature film titled <i>AS ONE</i> has been announced as a prequel story set 20 years before the events of the game, expanding the game’s universe with a new story. The movie is set to premiere in Summer 2025.<br><br>\n(Source: Anime Corner)"
     },
     {
-      "id": "tt35652362",
+      "id": "tt36592995",
       "type": "movie",
-      "name": "Kaitou Queen no Yuuga na Vacances",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162682-HxgVCRRBRykN.jpg",
+      "name": "Odekake Kozame: Tokai no Otomodachi",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177518-uS1k7uaDNfzh.png",
       "behaviorHints": {
-        "defaultVideoId": "tt35652362"
+        "defaultVideoId": "tt36592995"
       },
-      "description": "Genres: Mystery\nTags:Crime/Detective\nAnnounced at the \"Mirage QUEEN Prefers Parties\" event, that a new <i>Mirage QUEEN</i> anime has been greenlit.<br><br>\n(Source: Anime News Network, edited)"
+      "description": "Genres: Slice of Life\nTags:Anthropomorphism/Iyashikei/Animals/Urban/War\nKozame-chan's everyday life is full of fun and excitement! This time, the next destination is the big city. What awaits Kozame-chan is an unfamiliar place, and new friends. A big adventure filed with tiny miracles is about to begin.\n<br><br>\n(Source: Youtube)"
     },
     {
-      "id": "tt28664733",
+      "id": "tt35009463",
       "type": "movie",
-      "name": "Lost in Starlight",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx192002-sZCUa2OSDhZi.jpg",
+      "name": "Crayon Shin-chan: Chou Karei! Shakunetsu no Kasukabe Dancers",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185537-bHzg7pq3EIKe.png",
       "behaviorHints": {
-        "defaultVideoId": "tt28664733"
+        "defaultVideoId": "tt35009463"
       },
-      "description": "Genres: Drama, Romance, Sci-Fi\nTags:Heterosexual/Space Opera/Astronomy/Urban/Primarily Adult Cast\nIn 2050 Seoul, astronaut Nan-young’s ultimate goal is to visit Mars. But she fails the final test to onboard the fourth Mars Expedition Project. The musician Jay buries his dreams in a vintage audio equipment shop.\nThe two fall in love after a chance encounter. As they root for each other and dream of a new future. Nan-young is given another chance to fly to Mars, which is all she ever wanted…<br><br>\n\n(Source: Netflix)"
+      "description": "Genres: Comedy, Ecchi, Slice of Life\nTags:\nnull"
     },
     {
-      "id": "tt35652414",
+      "id": "tt36270843",
       "type": "movie",
-      "name": "Uta no☆Prince-sama♪ TABOO NIGHT XXXX",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172393-8dwjbJYYGi9W.jpg",
+      "name": "KING OF PRISM -Your Endless Call- Minna Kirameke! Prism☆Tours",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184756-sxp4ftnikI4n.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt35652414"
+        "defaultVideoId": "tt36270843"
       },
-      "description": "Genres: Music\nTags:Idol/Ensemble Cast\nThe third movie in the UtaPri franchise, spotlighting the idol group QUARTET NIGHT."
+      "description": "Genres: Music, Sports\nTags:Idol/Ice Skating/Primarily Male Cast/CGI\nThis time King of Prism is \"Prism☆Tours\"! Shin Ichijou and the other six members of SePTENTRION will travel across time and worlds in a time machine to the origins of Prism Shows. \n<br><br>\nIt will cross the boundaries of the series and intertwine with the worlds of the \"Pretty Rhythm\" series, \"PriPara\" series , \"Kiratto Pri☆Chan\", and \"Waccha PriMagi!\" to deliver a sparkling Prism☆Tours.\n<br><br>\nFated boy meets boy, our worlds are now connected by the prism's sparkle!\n<br><br>\n(Source: Official Website, translated)"
     },
     {
-      "id": "tt36551651",
+      "id": "tt32881486",
       "type": "movie",
-      "name": "Dragon Heart: Reikai Tanbouki",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186935-WPDw5KNiCSGb.png",
+      "name": "JUNK WORLD",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx191370-w0h51nHzJ1Qo.png",
       "behaviorHints": {
-        "defaultVideoId": "tt36551651"
+        "defaultVideoId": "tt32881486"
       },
-      "description": "Genres: Fantasy, Supernatural\nTags:\nnull"
+      "description": "Genres: Action, Adventure, Sci-Fi, Thriller\nTags:Philosophy/Stop Motion\nA sequel film to <i>Junk Head</i>."
     },
     {
-      "id": "tt36851989",
+      "id": "tt34798832",
       "type": "movie",
-      "name": "Dream Animals THE MOVIE",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b180124-kLrE636DrdKx.png",
+      "name": "Tooi-san wa Seishun Shitai! \"Baka to SmaPho to Romance to\"",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx193623-A9ZU1fCFSt4J.png",
       "behaviorHints": {
-        "defaultVideoId": "tt36851989"
+        "defaultVideoId": "tt34798832"
       },
-      "description": "Genres: Action, Adventure, Fantasy\nTags:\nDream Animals biscuits, a long-selling snack beloved by Japanese since its launch in 1978 has been sold in more than 20 countries around the world and features the animal names written in English on the biscuits. The product has enjoyed an explosion in popularity in recent years as merchandise, especially among young people. Now for the first time, the product is given treatment as an animated movie called Dream Animals: The Movie. How will these animal biscuit characters behave and sound as they embark upon a thrilling adventure while tugging at your heartstrings with endearingly rich personalities.\n<br><br>\n(Source: TBS)"
+      "description": "Genres: Comedy\nTags:\nTooi, an ordinary high school girl, was expecting a normal school life—until everything changed on her very first day.\n<br><br>\nAfter catching the attention of the unpredictable and overly energetic classmate Jel, she's suddenly roped into the mysterious \"Youth Romance Club,\" a bizarre school group dedicated to chasing down anything that feels \"youthful\" or \"romantic.\"\n<br><br>\nWhat should've been a carefree club quickly spirals into chaotic antics, with Tooi constantly playing the straight man to everyone's nonsense. To make things even wilder, the club's antics start getting streamed online!\n<br><br>\nBetween laughter, unexpected twists, and even a mysterious incident, this unpredictable school life is just getting started."
+    },
+    {
+      "id": "tt34807878",
+      "type": "movie",
+      "name": "Soreike! Anpanman: Chapon no Hero!",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186542-m9q64FHGRQXs.png",
+      "behaviorHints": {
+        "defaultVideoId": "tt34807878"
+      },
+      "description": "Genres: Comedy, Fantasy\nTags:\nThe film centers on Chapon, a mysterious boy who falls from the sky without any knowledge of where he came from. Staying with Anpanman, he one day helps someone out and gets to know the joy of making someone smile, and dreams of becoming a hero like Anpanman. But when Baikinman arrives, and reveals the secret of Chapon's origins, Chapon must figure out if his origins or his dreams define who he is.\n<br><br>\n(Source: Anime News Network)"
     }
   ]
 }
