Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -5,7 +5,7 @@
       "type": "series",
       "name": "DAN DA DAN Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185660-uB8RUMBGovGr.jpg",
-      "description": "Genres: Action, Comedy, Drama, Romance, Sci-Fi, Supernatural\nTags:Ghost/Aliens/Youkai/Shounen/Surreal Comedy/Primarily Teen Cast/Urban Fantasy/Heterosexual/Female Protagonist/Artificial Intelligence/Cult/Kaiju/Tokusatsu/Henshin/Exorcism/Male Protagonist/Body Horror\nThe second season of <i>Dandadan</i>.<br><br> Okarun and Jiji have made a strange discovery, while Momo finds herself under attack! What mysterious encounters await them next?!<br><br>\n\n(Source: Netflix Anime Twitter)"
+      "description": "Genres: Action, Comedy, Drama, Romance, Sci-Fi, Supernatural\nTags:Ghost/Aliens/Youkai/Shounen/Surreal Comedy/Primarily Teen Cast/Urban Fantasy/Heterosexual/Female Protagonist/Artificial Intelligence/Cult/Male Protagonist/Kaiju/Tokusatsu/Henshin/Exorcism/Body Horror\nThe second season of <i>Dandadan</i>.<br><br> Okarun and Jiji have made a strange discovery, while Momo finds herself under attack! What mysterious encounters await them next?!<br><br>\n\n(Source: Netflix Anime Twitter)"
     },
     {
       "id": "tt15765670",
@@ -18,7 +18,7 @@
       "id": "tt21975436",
       "type": "series",
       "name": "Kaiju No. 8 Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178754-OduDgtHsdFPD.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178754-xQEHrJS6sKAA.jpg",
       "description": "Genres: Action, Sci-Fi\nTags:Kaiju/Monster Boy/Shounen/Male Protagonist/Military/Urban Fantasy/Gore/Primarily Adult Cast/Shapeshifting/Guns/Super Power/Swordplay/Ojou-sama/Henshin/Tokusatsu/Work/Slapstick/Heterosexual/Tsundere\nThe second season of <i>Kaijuu 8-gou</i>. <br><br>\n\nKafka must face new challenges, new Kaiju, and… a new Captain?! <br><br>\n\n(Source: KAIJU NO. 8 EN Twitter)"
     },
     {
@@ -57,18 +57,18 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Anti-Hero/Medieval/Magic/Isekai/Male Protagonist/Dragons\nThe fourth season of <i>Tate no Yuusha no Nariagari</i>.<br><br>\n\nThe Return of the Exiled━<br><br>\n\n(Source: Official Twitter)\n\n"
     },
     {
-      "id": "tt33060122",
-      "type": "series",
-      "name": "Rascal Does Not Dream of Santa Claus",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171046-TboHNT6IyJy9.jpg",
-      "description": "Genres: Comedy, Psychological, Romance, Supernatural\nTags:College/Heterosexual/Female Protagonist/Male Protagonist/Urban Fantasy/Idol/Primarily Adult Cast/Acting\nSequel to the film <i>Seishun Buta Yarou wa Randoseru Girl no Yume wo Minai</i>.\n<br><br>\n<i>IS THE REAL MINISKIRT SANTA IN A SEA OF FAKES?</i><br><br>\n\nSakuta thought he’d already accomplished step one: Find Touko Kirishima. The next step was convincing her to help protect Mai, but that proved easier said than done. In the process, however, he makes a confusing discovery: There are multiple Touko Kirishimas! The Touko he knows may not actually be the person he’s looking for! With clues from his friends’ prophetic dreams, he gets closer to figuring out exactly what danger awaits Mai, but he’ll have to sort through the fake Kirishimas and determine who’s the real deal before it’s too late…<br><br> \n(Source: Yen Press)"
-    },
-    {
       "id": "tt33028568",
       "type": "series",
       "name": "The Summer Hikaru Died",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177689-d0mB5nYgdnhi.jpg",
       "description": "Genres: Horror, Mystery, Psychological, Supernatural, Thriller\nTags:Cosmic Horror/Unrequited Love/Rural/Male Protagonist/Monster Boy/Primarily Teen Cast/Seinen/LGBTQ+ Themes\nTwo best friends living in a rural Japanese village: Yoshiki and Hikaru. Growing up together, they were inseparable… until the day Hikaru came back from the mountains, and was no longer himself. “Something” has taken over Hikaru’s body, memories, feelings… and everything they know begins to unravel.<br>\n<br>\n(Source: Netflix)"
+    },
+    {
+      "id": "tt33060122",
+      "type": "series",
+      "name": "Rascal Does Not Dream of Santa Claus",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171046-TboHNT6IyJy9.jpg",
+      "description": "Genres: Comedy, Psychological, Romance, Supernatural\nTags:College/Heterosexual/Female Protagonist/Male Protagonist/Urban Fantasy/Idol/Primarily Adult Cast/Acting\nSequel to the film <i>Seishun Buta Yarou wa Randoseru Girl no Yume wo Minai</i>.\n<br><br>\n<i>IS THE REAL MINISKIRT SANTA IN A SEA OF FAKES?</i><br><br>\n\nSakuta thought he’d already accomplished step one: Find Touko Kirishima. The next step was convincing her to help protect Mai, but that proved easier said than done. In the process, however, he makes a confusing discovery: There are multiple Touko Kirishimas! The Touko he knows may not actually be the person he’s looking for! With clues from his friends’ prophetic dreams, he gets closer to figuring out exactly what danger awaits Mai, but he’ll have to sort through the fake Kirishimas and determine who’s the real deal before it’s too late…<br><br> \n(Source: Yen Press)"
     },
     {
       "id": "tt30876484",
@@ -197,18 +197,18 @@
       "description": "Genres: Slice of Life\nTags:Camping/Seinen\nGen Kinokura, 34 years old.<br><br>\n\nA solitary camper who cherishes his alone time in nature, Gen enjoys his usual solo camping trips. However, he unexpectedly encounters Shizuku Kusano, a complete beginner in camping. Reluctantly, Gen ends up camping with Shizuku, despite it being the last thing he wanted to do.\n<br><br>\nWhat will become of Gen’s peaceful camping life now that it’s turned upside down by this new companion?<br><br>\n(Source: Pony Canyon)"
     },
     {
-      "id": "tt36469298",
-      "type": "series",
-      "name": "Mikadono Sanshimai wa Angai, Choroi.",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178886-Q79QMeGQAJL7.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Shounen/Heterosexual/School\nThough Ayase Yuu is the son of a renowned and talented actress, he is below average in anything he does. He is entrusted to live under the care of his mother's friend and later discovers that he will also be rooming with the three sisters from his school who possess both beauty and talent. Though Yuu thought that an understanding would be impossible to reach between an ordinary person and those blessed with talent, the three sisters are surprisingly...?!"
-    },
-    {
       "id": "tt37113118",
       "type": "series",
       "name": "Ruri no Houseki",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180929-ytdzqbrOhots.jpg",
       "description": "Genres: Slice of Life\nTags:Cute Girls Doing Cute Things/Primarily Female Cast/Outdoor Activities/Female Protagonist/Seinen/Wilderness/Rural\nMineral collecting is like a modern-day treasure hunt!\n<br><br>\nRuri, a high school girl who loves jewelry and accessories, gets into the world of mineral collecting, venturing into mountains, rivers, and caves. The first volume features numerous minerals, including quartz, garnet, pyrite, gold sand, and fluorite. The manga is full of fascinating scenes focusing on specialized tools such as a panning dish, hammer, and topographical maps. An authentic scientific adventure based on the author's solid knowledge of mineralogy!\n<br><br>\n(Source: Harta, translated)"
+    },
+    {
+      "id": "tt36469298",
+      "type": "series",
+      "name": "Mikadono Sanshimai wa Angai, Choroi.",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178886-Q79QMeGQAJL7.jpg",
+      "description": "Genres: Comedy, Romance\nTags:Shounen/Heterosexual/School\nThough Ayase Yuu is the son of a renowned and talented actress, he is below average in anything he does. He is entrusted to live under the care of his mother's friend and later discovers that he will also be rooming with the three sisters from his school who possess both beauty and talent. Though Yuu thought that an understanding would be impossible to reach between an ordinary person and those blessed with talent, the three sisters are surprisingly...?!"
     },
     {
       "id": "tt35652446",
