Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -190,18 +190,18 @@
       "description": "Genres: Action, Fantasy\nTags:Pandemic/Dystopian/War/Kemonomimi/Ensemble Cast\n\"She\" was supposed to be a beacon of hope. But now her anger and hatred have turned into flames of war and are about to engulf the people.\n<br><br>\nOnly Rhodes Island, a neutral organization, can stop Reunion's rampage and the conspiracy behind it. Amiya and the others head towards Chernobog's Core City, which is on a collision course with Lungmen. What fate awaits them there...\n<br><br>\n(Source: Official Site, translated, edited)"
     },
     {
+      "id": "tt37113118",
+      "type": "series",
+      "name": "Ruri no Houseki",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180929-ytdzqbrOhots.jpg",
+      "description": "Genres: Adventure, Slice of Life\nTags:Cute Girls Doing Cute Things/Primarily Female Cast/Outdoor Activities/Female Protagonist/Seinen/Wilderness/Rural\nMineral collecting is like a modern-day treasure hunt!\n<br><br>\nRuri, a high school girl who loves jewelry and accessories, gets into the world of mineral collecting, venturing into mountains, rivers, and caves. The first volume features numerous minerals, including quartz, garnet, pyrite, gold sand, and fluorite. The manga is full of fascinating scenes focusing on specialized tools such as a panning dish, hammer, and topographical maps. An authentic scientific adventure based on the author's solid knowledge of mineralogy!\n<br><br>\n(Source: Harta, translated)"
+    },
+    {
       "id": "tt35335095",
       "type": "series",
       "name": "Solo Camping for Two",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185965-LlzTLSTBUbEA.jpg",
       "description": "Genres: Slice of Life\nTags:Camping/Seinen\nGen Kinokura, 34 years old.<br><br>\n\nA solitary camper who cherishes his alone time in nature, Gen enjoys his usual solo camping trips. However, he unexpectedly encounters Shizuku Kusano, a complete beginner in camping. Reluctantly, Gen ends up camping with Shizuku, despite it being the last thing he wanted to do.\n<br><br>\nWhat will become of Gen’s peaceful camping life now that it’s turned upside down by this new companion?<br><br>\n(Source: Pony Canyon)"
-    },
-    {
-      "id": "tt37113118",
-      "type": "series",
-      "name": "Ruri no Houseki",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180929-ytdzqbrOhots.jpg",
-      "description": "Genres: Slice of Life\nTags:Cute Girls Doing Cute Things/Primarily Female Cast/Outdoor Activities/Female Protagonist/Seinen/Wilderness/Rural\nMineral collecting is like a modern-day treasure hunt!\n<br><br>\nRuri, a high school girl who loves jewelry and accessories, gets into the world of mineral collecting, venturing into mountains, rivers, and caves. The first volume features numerous minerals, including quartz, garnet, pyrite, gold sand, and fluorite. The manga is full of fascinating scenes focusing on specialized tools such as a panning dish, hammer, and topographical maps. An authentic scientific adventure based on the author's solid knowledge of mineralogy!\n<br><br>\n(Source: Harta, translated)"
     },
     {
       "id": "tt36469298",
@@ -221,7 +221,7 @@
       "id": "tt36592820",
       "type": "series",
       "name": "Scooped Up by an S-Rank Adventurer!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179885-YQsKgm162AsF.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179885-m1nu1QvnRmII.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Dungeon\n<i>\"We don’t need a useless white mage.”</i>\n<br><br>\nLloyd is a white mage who was unexpectedly banished from the hero’s party. As he was lost and uncertain, he happened to cross paths with an S-rank adventurer party in need of a white mage, so he joined them on their quest. Little did anyone know at the time that the hero’s party would fall apart and Lloyd would rise to fame.\n<br><br>\nThis is a story about an unmatched support magic user, who believes himself to be ordinary, becoming an unstoppable adventurer.<br><br>\n(Source: Crunchyroll)"
     },
     {
@@ -260,18 +260,18 @@
       "description": "Genres: Comedy, Romance\nTags:Heterosexual/Otaku Culture/Video Games\nThe story follows Renji Kusakabe, a young man who works part time at a game center arcade. One day, Renji encounters an English girl named Lily, and the two of them trade diaries and begin an unlikely friendship of cultural exchange...\n<br><br>\n(Source: Crunchyroll News)"
     },
     {
-      "id": "tt35652469",
-      "type": "series",
-      "name": "Zutaboro Reijou wa Ane no Moto Konyakusha ni Dekiai Sareru",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179879-cGCVUUPS6sbV.png",
-      "description": "Genres: Drama, Romance\nTags:Josei/Female Protagonist\nWith unmaintained red hair and shabby clothes, Marie, the baron's daughter, has been treated like a servant all her life. Count Granado, the country's richest man, who is said to be a difficult misogynist, falls in love with her at first sight. However, due to a misunderstanding, Count Granado proposes to her sister Anastasia, who looks like a princess, instead of the ragged Marie. A very popular work from \"Become a Novelist\"! Marie's Cinderella story that began with a hero's misunderstanding!\n<BR><BR>\n(Source: Pocket Comics)"
-    },
-    {
       "id": "tt32991344",
       "type": "series",
       "name": "Clevatess",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178869-iNDlhrWx01tN.jpg",
       "description": "Genres: Action, Drama, Fantasy\nTags:Anti-Hero/Demons/Swordplay/Gore\nThe story centers on the the titular Clevatess, the lord of Dark Beasts, who wields both uncanny intellect and destructive power. Frustrated by the 13 heroes tasked to destroy him, he has decided to be rid of humanity once and for all. However, he has been charged with one nuisance: he revived a hero he personally slayed and adopts an orphaned humanoid baby—the last hope to save a dying world. The world stands upon the brink of Armageddon, with the obligation of raising one child holding it all back. Now bound together, what fate awaits this unlikely trio?<br>\n<br>\n(Source: Anime News Network, Crunchyroll, edited)"
+    },
+    {
+      "id": "tt35652469",
+      "type": "series",
+      "name": "Zutaboro Reijou wa Ane no Moto Konyakusha ni Dekiai Sareru",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179879-cGCVUUPS6sbV.png",
+      "description": "Genres: Drama, Romance\nTags:Josei/Female Protagonist\nWith unmaintained red hair and shabby clothes, Marie, the baron's daughter, has been treated like a servant all her life. Count Granado, the country's richest man, who is said to be a difficult misogynist, falls in love with her at first sight. However, due to a misunderstanding, Count Granado proposes to her sister Anastasia, who looks like a princess, instead of the ragged Marie. A very popular work from \"Become a Novelist\"! Marie's Cinderella story that began with a hero's misunderstanding!\n<BR><BR>\n(Source: Pocket Comics)"
     },
     {
       "id": "tt31435652",
