Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -8,7 +8,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32820897"
       },
-      "description": "Genres: Action, Adventure, Drama, Supernatural\nTags:War/Male Protagonist/Demons/Revenge/Swordplay/Dungeon/Shounen/Super Power/Curses\n<i>The All-Out War Begins.</i>\n\n<br><br>\nTheatrical trilogy adaptation of the Infinity Castle Arc."
+      "description": "Genres: Action, Adventure, Drama, Supernatural\nTags:War/Demons/Male Protagonist/Swordplay/Revenge/Dungeon/Shounen/Super Power/Curses\n<i>The All-Out War Begins.</i>\n\n<br><br>\nTheatrical trilogy adaptation of the Infinity Castle Arc."
     },
     {
       "id": "tt30472557",
