--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -246,18 +246,11 @@
       "description": "Genres: Action, Comedy, Horror, Supernatural\nTags:Teacher/Shounen/Youkai/Demons/Exorcism/School/Primarily Child Cast\nA new anime project for <i>Jigoku Sensei Nube</i>.\n<br><br>\nThe story follows Meisuke Nueno, aka \"Nube,\" a psychic teacher with a demon hand, as he battles evil spirits and monsters to protect his students in this saga that employs elements of Japanese mythology and folklore to tell a fan-pleasing action story.\n<br><br>\nKnown for its occult and horror elements on school ghost stories and urban legends, Nube captivated readers across generations with his heroic efforts to save his students from supernatural threats."
     },
     {
-      "id": "tt36143285",
+      "id": "tt26471411",
       "type": "series",
-      "name": "Ame to Kimi to",
+      "name": "With You and the Rain",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180425-c97mbuFNlTzw.jpg",
-      "description": "Genres: Comedy, Slice of Life\nTags:Seinen/Female Protagonist/Animals/Primarily Adult Cast/Urban\nIf it looks like a dog and acts like a dog and insists it's a dog, it's...a dog? Probably? She adopted it anyway, and her life with this \"dog\" will never be boring! \n<br><br>\n(Source: Kodansha USA)"
-    },
-    {
-      "id": "tt35652489",
-      "type": "series",
-      "name": "GaCen Shoujo to Ibunka Kouryuu",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180794-rQGxkguEc2ov.png",
-      "description": "Genres: Comedy, Romance\nTags:Heterosexual/Otaku Culture/Video Games\nThe story follows Renji Kusakabe, a young man who works part time at a game center arcade. One day, Renji encounters an English girl named Lily, and the two of them trade diaries and begin an unlikely friendship of cultural exchange...\n<br><br>\n(Source: Crunchyroll News)"
+      "description": "Genres: Comedy, Slice of Life\nTags:Seinen/Female Protagonist/Animals/Primarily Adult Cast/Urban\nOn a rainy day, Fuji meets a cute critter posing as a dog and offering an umbrella and a cue card that says, “Please take me home” and she can’t resist. With this dog-poster’s quirky charm and mysterious ways, life together becomes a heartwarming adventure of friendship and shared seasons.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32991344",
@@ -265,6 +258,13 @@
       "name": "Clevatess",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178869-iNDlhrWx01tN.jpg",
       "description": "Genres: Action, Drama, Fantasy\nTags:Anti-Hero/Demons/Swordplay/Gore\nThe story centers on the the titular Clevatess, the lord of Dark Beasts, who wields both uncanny intellect and destructive power. Frustrated by the 13 heroes tasked to destroy him, he has decided to be rid of humanity once and for all. However, he has been charged with one nuisance: he revived a hero he personally slayed and adopts an orphaned humanoid baby—the last hope to save a dying world. The world stands upon the brink of Armageddon, with the obligation of raising one child holding it all back. Now bound together, what fate awaits this unlikely trio?<br>\n<br>\n(Source: Anime News Network, Crunchyroll, edited)"
+    },
+    {
+      "id": "tt35652489",
+      "type": "series",
+      "name": "GaCen Shoujo to Ibunka Kouryuu",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180794-rQGxkguEc2ov.png",
+      "description": "Genres: Comedy, Romance\nTags:Heterosexual/Otaku Culture/Video Games\nThe story follows Renji Kusakabe, a young man who works part time at a game center arcade. One day, Renji encounters an English girl named Lily, and the two of them trade diaries and begin an unlikely friendship of cultural exchange...\n<br><br>\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt35652469",
